# AnimatedLpg

./: .gitignore  CMakeLists.txt
plugin/: CMakeLists.txt
plugin/dsp/: AnimatedLPG.cpp  AnimatedLPG.h  AnimatedLPGEffect.cpp  AnimatedLPGEffect.h  AnimatedVactrol.cpp  AnimatedVactrol.h
plugin/include/: AnimatedLpgEditor.h  AnimatedLpgProcessor.h
plugin/procedural/: circularFloor.h  sharedHelper.h  sphereGeometry.h
plugin/shaders/: common.wgsl  fs_main.wgsl  lighting.wgsl  mat_floor.wgsl  vs_main.wgsl
plugin/source/: AnimatedLpgEditor.cpp  AnimatedLpgProcessor.cpp  gpuSurface.mm
plugin/ui/: AnimatedLogo.cpp  AnimatedLogo.h  MyUniforms.h  WebGpuWindow.cpp  WebGpuWindow.h  cameraState.h  dragState.h  geometryMath.h  gpuSurface.h  resourceManager.cpp  resourceManager.h  scene.cpp  scene.h  shaderLoader.h  utilityHelper.h
